<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <RelativeLayout
        android:background="@drawable/dialog_radius_dark"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout">
        <ImageView
            android:padding="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/imageView" />
        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/imageView">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/support_input_layout_email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:id="@+id/support_input_email"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/support_input_layout_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:id="@+id/support_input_name"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/support_input_layout_message"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:lines="2"
                    android:id="@+id/support_input_message"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:background="@drawable/bg_loading_subtitles_accent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <RelativeLayout
                    android:id="@+id/relative_layout_support_activity_send"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="10dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_send"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:textSize="7pt"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/send_support"
                        android:layout_marginLeft="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
